--- a/wp-content/themes/publiframework/package.json
+++ b/wp-content/themes/publiframework/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --config webpack.config.dev.js",
-    "buildJS": "esbuild assets/dist/js/main.js --allow-overwrite --bundle --minify --outfile=assets/dist/js/main.js --legal-comments=none"
+    "buildJS": "esbuild assets/dist/js/main.js --allow-overwrite --bundle --minify --outfile=assets/dist/js/main.js --legal-comments=none",
+    "serve": "browser-sync start --proxy \"https://localhost/site-sorverglianza-italia/servizi/\""
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "bootstrap": "^5.2.3",
+    "browser-sync": "^3.0.3",
     "browser-sync-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
